// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs The number of snapshots is matched correctly 1`] = `
<div>
  <div
    class="brd-c-lfgwGO brd-c-lfgwGO-top"
  >
    <div
      class="brd-c-lfgwGO-nav"
      role="tablist"
    >
      <div
        class="brd-c-lfgwGO-nav-wrap"
      >
        <div
          class="brd-c-lfgwGO-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-0"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-0"
              role="tab"
              tabindex="0"
            >
              tab-0
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-1"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-1"
              role="tab"
              tabindex="0"
            >
              tab-1
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab brd-c-lfgwGO-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-2"
              aria-selected="true"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-2"
              role="tab"
              tabindex="0"
            >
              tab-2
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-3"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-3"
              role="tab"
              tabindex="0"
            >
              tab-3
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-4"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-4"
              role="tab"
              tabindex="0"
            >
              tab-4
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-5"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-5"
              role="tab"
              tabindex="0"
            >
              tab-5
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-6"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-6"
              role="tab"
              tabindex="0"
            >
              tab-6
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-7"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-7"
              role="tab"
              tabindex="0"
            >
              tab-7
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-8"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-8"
              role="tab"
              tabindex="0"
            >
              tab-8
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-9"
              aria-selected="false"
              class="brd-c-lfgwGO-tab-btn"
              id="rc-tabs-test-tab-9"
              role="tab"
              tabindex="0"
            >
              tab-9
            </div>
          </div>
          <div
            class="brd-c-lfgwGO-ink-bar brd-c-lfgwGO-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="brd-c-lfgwGO-nav-operations brd-c-lfgwGO-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="brd-c-lfgwGO-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <i
            data-testid="mock-icon-More"
          />
        </button>
      </div>
    </div>
    <div
      class="brd-c-lfgwGO-content-holder"
    >
      <div
        class="brd-c-lfgwGO-content brd-c-lfgwGO-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-0"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-0"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-1"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-1"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-2"
          class="brd-c-lfgwGO-tabpane brd-c-lfgwGO-tabpane-active"
          id="rc-tabs-test-panel-2"
          role="tabpanel"
          tabindex="0"
        >
          tab title 
          2
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-3"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-3"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-4"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-4"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-5"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-5"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-6"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-6"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-7"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-7"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-8"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-8"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-9"
          class="brd-c-lfgwGO-tabpane"
          id="rc-tabs-test-panel-9"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot correctly 1`] = `
<div
  class="brd-c-lfgwGO brd-c-lfgwGO-top"
>
  <div
    class="brd-c-lfgwGO-nav"
    role="tablist"
  >
    <div
      class="brd-c-lfgwGO-nav-wrap"
    >
      <div
        class="brd-c-lfgwGO-nav-list"
        style="transform: translate(0px, 0px);"
      >
        <div
          class="brd-c-lfgwGO-tab"
        >
          <div
            aria-controls="rc-tabs-test-panel-1"
            aria-selected="false"
            class="brd-c-lfgwGO-tab-btn"
            id="rc-tabs-test-tab-1"
            role="tab"
            tabindex="0"
          >
            tab 1
          </div>
        </div>
        <div
          class="brd-c-lfgwGO-tab brd-c-lfgwGO-tab-active"
        >
          <div
            aria-controls="rc-tabs-test-panel-2"
            aria-selected="true"
            class="brd-c-lfgwGO-tab-btn"
            id="rc-tabs-test-tab-2"
            role="tab"
            tabindex="0"
          >
            tab 2
          </div>
        </div>
        <div
          class="brd-c-lfgwGO-tab"
        >
          <div
            aria-controls="rc-tabs-test-panel-3"
            aria-selected="false"
            class="brd-c-lfgwGO-tab-btn"
            id="rc-tabs-test-tab-3"
            role="tab"
            tabindex="0"
          >
            tab 3
          </div>
        </div>
        <div
          class="brd-c-lfgwGO-ink-bar brd-c-lfgwGO-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="brd-c-lfgwGO-nav-operations brd-c-lfgwGO-nav-operations-hidden"
    >
      <button
        aria-controls="rc-tabs-test-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="brd-c-lfgwGO-nav-more"
        id="rc-tabs-test-more"
        style="visibility: hidden; order: 1;"
        tabindex="-1"
        type="button"
      >
        <i
          data-testid="mock-icon-More"
        />
      </button>
    </div>
  </div>
  <div
    class="brd-c-lfgwGO-content-holder"
  >
    <div
      class="brd-c-lfgwGO-content brd-c-lfgwGO-content-top"
    >
      <div
        aria-hidden="true"
        aria-labelledby="rc-tabs-test-tab-1"
        class="brd-c-lfgwGO-tabpane"
        id="rc-tabs-test-panel-1"
        role="tabpanel"
        style="display: none;"
        tabindex="-1"
      />
      <div
        aria-hidden="false"
        aria-labelledby="rc-tabs-test-tab-2"
        class="brd-c-lfgwGO-tabpane brd-c-lfgwGO-tabpane-active"
        id="rc-tabs-test-panel-2"
        role="tabpanel"
        tabindex="0"
      >
        second
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="rc-tabs-test-tab-3"
        class="brd-c-lfgwGO-tabpane"
        id="rc-tabs-test-panel-3"
        role="tabpanel"
        style="display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
